--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
   <div>
     <h1>James Kelley</h1>
-    <p>Energetic, passionate, self-driven individual with a need to fill the gap between technology and humanity.</p>
+    
+    <div id="contact-info">
+      <p>
+        Phone - (612)387-1003
+        <br>
+        Address - 2400 109th Ave NW #107, Coon Rapids, MN 55433
+    
+    <p>Energetic, self-driven individual, passionate about technology and working with like-minded people on creating a better future.</p>
   </div>
   
   <div class="exp-header">
