--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <div>
     <h1>James Kelley</h1>
     
-    <div id="contact-info">
+    <div class="contact-info">
       <p>
         Phone - (612)387-1003
         <br>
         Address - 2400 109th Ave NW #107, Coon Rapids, MN 55433
+      </p>
+    </div>
     
     <p>Energetic, self-driven individual, passionate about technology and working with like-minded people on creating a better future.</p>
   </div>
